# pr2_doors

door_handle_detector/: CMakeLists.txt  package.xml
door_handle_detector/data/: annotate.py  convert.py  handles_data.xml
door_handle_detector/include/door_handle_detector/: doors_detector.h  geometric_helper.h  handle_detector.h
door_handle_detector/include/door_handle_detector/geometry/: angles.h  areas.h  point.h
door_handle_detector/include/door_handle_detector/kdtree/: kdtree_ann.h  kdtree_flann.h
door_handle_detector/include/door_handle_detector/sample_consensus/: lmeds.h  mlesac.h  msac.h  ransac.h  rmsac.h  rransac.h  sac.h  sac_model_circle.h  sac_model_cylinder.h  sac_model_line.h  sac_model_normal_plane.h  sac_model_oriented_line.h  sac_model_oriented_plane.h  sac_model_parallel_lines.h  sac_model_plane.h  sac_model_sphere.h
door_handle_detector/include/tf/: message_notifier.h
door_handle_detector/include/topic_synchronizer2/: topic_synchronizer.h
door_handle_detector/launch/: door.vcg  door_handle_detector.xml  door_handle_detector_bag.xml  door_handle_detector_params.xml  door_handle_detector_vision.xml  door_handle_detector_vision_test.launch  record_bag.launch  setup_for_recording.launch
door_handle_detector/scripts/: find_door.py  kill_record.sh  point_cloud_cropper.py
door_handle_detector/src/: doors_detector.cpp  geometric_helper.cpp  handle_detector.cpp  handle_detector_vision.cpp
door_handle_detector/src/cloud_geometry/: angles.cpp  areas.cpp  distances.cpp  intersections.cpp  nearest.cpp  point.cpp  projections.cpp  statistics.cpp  transforms.cpp
door_handle_detector/src/cloud_kdtree/: kdtree_ann.cpp  kdtree_flann.cpp
door_handle_detector/src/sample_consensus/: lmeds.cpp  mlesac.cpp  msac.cpp  ransac.cpp  rmsac.cpp  rransac.cpp  sac.cpp  sac_model.cpp  sac_model_circle.cpp  sac_model_cylinder.cpp  sac_model_line.cpp  sac_model_normal_plane.cpp  sac_model_oriented_line.cpp  sac_model_oriented_plane.cpp  sac_model_parallel_lines.cpp  sac_model_plane.cpp  sac_model_sphere.cpp
door_handle_detector/srv/: DoorsDetector.srv  DoorsDetectorCloud.srv
door_handle_detector/test/: detect_handle_from_bag.py  door_checkerboard_detector.cpp  door_closed_39.launch  door_closed_40.launch  door_closed_alex.launch  door_closed_blaise.launch  door_closed_conference_1.launch  door_closed_conor.launch  door_closed_curt.launch  door_closed_daniel.launch  door_closed_ethan.launch  door_closed_john.launch  door_closed_josh.launch  door_closed_kurt.launch  door_closed_melonee.launch  door_closed_melonee_2.launch  door_closed_melonee_3.launch  door_closed_patrick.launch  door_closed_sachin.launch  door_closed_tully.launch  door_closed_victoria.launch  door_closed_vijay.launch  point_cloud_cropper.cpp  test_detect_service.cpp  test_door_detection.cpp  test_preempt_service.cpp  test_setup.xml
door_handle_detector/test/launch/: bag_detector.launch  open_door.launch  test_door_handle_detection.launch  test_door_handle_detection_sim.launch
door_msgs/: CMakeLists.txt  package.xml
door_msgs/action/: CheckPath.action  Door.action
door_msgs/msg/: Door.msg  DoorCmd.msg
geometric_shapes_msgs/: CMakeLists.txt  package.xml
geometric_shapes_msgs/.svn/: all-wcprops  entries
geometric_shapes_msgs/msg/.svn/: all-wcprops  entries
geometric_shapes_msgs/src/geometric_shapes_msgs/msg/: _Shape.py  __init__.py
mapping_msgs/: CMakeLists.txt  package.xml
mapping_msgs/.svn/: all-wcprops  entries
mapping_msgs/.svn/text-base/: CMakeLists.txt.svn-base  manifest.xml.svn-base
mapping_msgs/msg/.svn/: all-wcprops  entries
mapping_msgs/msg/.svn/text-base/: CollisionObject.msg.svn-base
mapping_msgs/src/mapping_msgs/msg/: _AttachedCollisionObject.py  _CollisionMap.py  (+5 more)
pr2_doors_actions/: CMakeLists.txt  package.xml
pr2_doors_actions/config/: arm_ik_r_arm.yaml
pr2_doors_actions/include/pr2_doors_actions/: action_check_path.h  action_detect_door.h  action_detect_handle.h  action_grasp_handle.h  action_move_base_door.h  action_open_door.h  action_push_door.h  action_release_handle.h  action_touch_door.h  action_unlatch_handle.h
pr2_doors_actions/launch/: door_actions.xml  footprint.yaml
pr2_doors_actions/src/: action_check_path.cpp  action_detect_door.cpp  action_detect_handle.cpp  action_grasp_handle.cpp  action_move_base_door.cpp  action_open_door.cpp  action_push_door.cpp  action_release_handle.cpp  action_runner.cpp  action_touch_door.cpp  action_unlatch_handle.cpp
pr2_doors_actions/test/: test_executive_functions.cpp  test_executive_functions.launch  trigger_doors_actions.cpp
pr2_doors_common/: CMakeLists.txt  package.xml
pr2_doors_common/include/pr2_doors_common/: door_functions.h
pr2_doors_common/src/: door_functions.cpp
pr2_doors_common/test/: test_door_functions.cpp  test_door_functions.launch
pr2_doors_executive/: CMakeLists.txt  doors.launch  mainpage.dox  package.xml  start_doors_app.launch
pr2_doors_executive/config/: controllers.xml  navigation.xml  perception.xml
pr2_doors_executive/scripts/: conversions.py  door_functions.py  executive.py  trigger_opendoor.py
pr2_doors_gazebo_demo/: CMakeLists.txt  package.xml
pr2_doors_gazebo_demo/launch/: door_position_controllers.launch  empty_world.launch  load_door.launch  pr2_and_door.launch
pr2_doors_gazebo_demo/robots/: pr2_r_arm_only.launch
pr2_doors_gazebo_demo/test/: door_demo_test_exec_test.py  waiter.py
pr2_doors_gazebo_demo/urdf/: apple.urdf  door.gazebo  door.urdf.xacro  urdf.urdf
pr2_laser_snapshotter/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
pr2_laser_snapshotter/action/: TiltLaserSnapshot.action
pr2_laser_snapshotter/src/: pr2_laser_snapshotter.cpp  pr2_laser_snapshotter_action.cpp
pr2_laser_snapshotter/test/: dummy_scan_producer.cpp  test_assembler.cpp  test_laser_assembler.launch  test_laser_assembler_skew.launch
tff_controller/: CMakeLists.txt  controller_plugins.xml  mainpage.dox  package.xml
tff_controller/include/tff_controller/: tff_controller.h
tff_controller/msg/: TaskFrameFormalism.msg
tff_controller/src/: tff_controller.cpp
(+4 files in other folders)
