<package>
  <name>geometric_shapes_msgs</name>
  <version>1.0.0</version>
  <description>This package contains messages for representing primitive geometric shapes.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/geometric_shapes_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ioan Sucan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/msg/cpp"/>
</export>

</package>
